# super-shooter-remastered

./: pyproject.toml
assets/tiles/entities/: Player.tsx  Zombie.tsx
assets/tiles/levels/: Wall.tsx  level1.tmx
super_shooter_remastered/: __main__.py  constants.py  game.py
super_shooter_remastered/sprites/: player_sprite.py  zombie_sprite.py
